@@ -493,6 +493,19 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|BooleanClause
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|FuzzyQuery
 import|;
 end_import
@@ -2025,17 +2038,15 @@ name|UnsupportedOperationException
 argument_list|()
 throw|;
 block|}
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"unchecked"
-argument_list|)
 DECL|method|getBooleanQuery
 specifier|protected
 name|Query
 name|getBooleanQuery
 parameter_list|(
 name|List
+argument_list|<
+name|BooleanClause
+argument_list|>
 name|clauses
 parameter_list|,
 name|boolean
