@@ -1332,7 +1332,7 @@ name|setFieldsBoost
 parameter_list|(
 name|Map
 argument_list|<
-name|CharSequence
+name|String
 argument_list|,
 name|Float
 argument_list|>
