@@ -815,7 +815,7 @@ name|Exception
 block|{
 name|Map
 argument_list|<
-name|CharSequence
+name|String
 argument_list|,
 name|Float
 argument_list|>
@@ -824,7 +824,7 @@ init|=
 operator|new
 name|HashMap
 argument_list|<
-name|CharSequence
+name|String
 argument_list|,
 name|Float
 argument_list|>
